<resources>
    <string name="app_name">Calendar App</string>
    <string name="message">の給料は</string>
    <string name="message2">円です</string>
    <string name="setting">設定</string>
    <string name="message3">時給</string>
    <string name="message4">円/h</string>
    <string name="rbutton">back</string>
    <string name="sbutton">save</string>
    <string name="scheduleTitle">Daily Schedule</string>
    <string name="date">2017年6月10日(土)</string>
    <string name="message5">開始時刻</string>
    <string name="message6">終了時刻</string>
    <string name="goToDaily">予定を入力</string>
    <string name="message7">計算する</string>
    <string name="title">シフト管理アプリ</string>
    <string name="warning">終了時刻は\n開始時刻より遅い時刻に設定して下さい</string>
</resources>
