<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_daily"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calendarapp.DailyActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduleTitle"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="138dp"
        android:text="@string/date"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="296dp"
        android:layout_height="353dp"
        android:layout_marginLeft="-12dp"
        android:layout_marginTop="305dp"
        android:timePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/timePicker2"
        android:layout_width="298dp"
        android:layout_height="351dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="305dp"
        android:timePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="256dp"
        android:text="@string/message5"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginLeft="395dp"
        android:layout_marginTop="256dp"
        android:text="@string/message6"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="141dp"
        android:layout_height="76dp"
        android:text="@string/sbutton"
        android:textSize="24sp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="175dp"
        android:onClick="save"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginLeft="30dp"
        android:text="@string/rbutton"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="33dp"
        android:onClick="goToMain"/>

</android.support.constraint.ConstraintLayout>
