<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calendarapp.SettingActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="160dp"
        android:layout_height="94dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="121dp"
        android:text="@string/setting"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message3"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="261dp"
        android:layout_marginLeft="119dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message4"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="261dp"
        android:layout_marginLeft="313dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="99dp"
        android:layout_height="63dp"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="1000"
        android:inputType="number"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="103dp"
        android:layout_height="50dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="436dp"
        android:text="@string/rbutton"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goToMain"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="95dp"
        android:layout_height="57dp"
        android:layout_marginLeft="441dp"
        android:layout_marginTop="247dp"
        android:text="@string/sbutton"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="save"/>
</android.support.constraint.ConstraintLayout>
