<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stripe1"
    android:orientation="horizontal"
    tools:context="com.example.calendarapp.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="goToSetting"
        android:text="@string/setting"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePickerSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="595dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="496dp"
        android:layout_height="283dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/gray"
        android:spinnersShown="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="52dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="73dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:layout_marginTop="674dp"
        android:text="@string/message"
        android:textSize="36sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="674dp"
        android:text="@string/message2"
        android:textSize="36sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editNumberText"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginLeft="348dp"
        android:layout_marginTop="664dp"
        android:background="@drawable/gray"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="263dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="goToDaily"
        android:text="@string/goToDaily"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showCal"
        android:text="@string/message7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/calView"
        android:layout_width="347dp"
        android:layout_height="142dp"
        android:layout_marginBottom="203dp"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="407dp"
        android:layout_height="68dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/white"
        android:text="@string/title"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
